[~] Jump to title fix [~] Numbered and dashed lists fix

--- a/sass/hercules.sass
+++ b/sass/hercules.sass
@@ -182,6 +182,15 @@ h1
         font-style: italic
         line-height: 1.4em
         margin-top: 2em
+    h1, h2, h3, h4
+        position: relative
+        a
+            position: absolute
+            top: -.8em
+            right: 0
+            bottom: 0
+            left: 0
+            z-index: -1
     time
         font-size: .7em 
         color: $sub-dark-color
@@ -266,7 +275,7 @@ h1
             display: inline-block
             min-width: 1.5em
             position: absolute
-            top: .1em
+            top: .08em
             left: 0
 .dashed-list
     > ul
@@ -283,7 +292,7 @@ h1
             display: inline-block
             min-width: 1.5em
             position: absolute
-            top: .1em
+            top: .08em
             left: 0
 
 
